<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    android:orientation="horizontal">

    <TextView
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        android:id="@+id/idTxt"
        android:layout_weight=".25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/id" />

    <TextView
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        android:id="@+id/nmKaryawanTxt"
        android:layout_weight=".25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <TextView
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        android:id="@+id/tglMskKrjTxt"
        android:layout_weight=".25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tgl_msk_kerja"/>

    <TextView
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        android:id="@+id/usiaTxt"
        android:layout_weight=".25"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/usia"/>

</androidx.appcompat.widget.LinearLayoutCompat>