<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/formI"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight=".7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="@string/warn_main_2"/>

            <Button
                android:layout_weight=".3"
                android:text="@string/list_user_github"
                android:id="@+id/userGithubBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:textSize="22sp"
            android:paddingTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formI"
            android:id="@+id/filterDataTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/filter_date"/>

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/filterDataTxt"
            android:id="@+id/warnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/warn_main_1"/>

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/warnText"
            android:id="@+id/nmKaryawanTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/karyawan_name"/>


        <TextView
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/nmKaryawanTxt"
            android:id="@+id/usiaTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usia"/>


        <TextView
            app:layout_constraintStart_toStartOf="parent"
            android:paddingTop="10dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/usiaTxt"
            android:id="@+id/tglMskKrjTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tgl_msk_kerja"/>


        <EditText
            android:hint="@string/karyawan_name_small"
            android:layout_marginStart="20dp"
            android:id="@+id/nmKaryawanTxtET"
            app:layout_constraintStart_toEndOf="@id/nmKaryawanTxt"
            app:layout_constraintTop_toTopOf="@id/nmKaryawanTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <EditText
            android:inputType="number"
            android:gravity="end"
            android:hint="@string/usia_small"
            android:id="@+id/usiaTxtET"
            app:layout_constraintStart_toStartOf="@id/nmKaryawanTxtET"
            app:layout_constraintEnd_toEndOf="@id/nmKaryawanTxtET"
            app:layout_constraintTop_toTopOf="@id/usiaTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


        <EditText
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:hint="@string/tgl_msk_kerja_small"
            android:id="@+id/tglMskKrjTxtET"
            app:layout_constraintEnd_toEndOf="@id/nmKaryawanTxtET"
            app:layout_constraintStart_toStartOf="@id/nmKaryawanTxtET"
            app:layout_constraintTop_toTopOf="@id/tglMskKrjTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="20dp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/nmKaryawanTxt"
            app:layout_constraintStart_toEndOf="@id/nmKaryawanTxtET"
            android:id="@+id/sd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sd"/>

        <TextView
            android:paddingTop="10dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/sd1"
            app:layout_constraintTop_toTopOf="@id/usiaTxtET"
            android:id="@+id/sd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sd"/>

        <TextView
            android:paddingTop="10dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/sd1"
            app:layout_constraintTop_toTopOf="@id/tglMskKrjTxtET"
            android:id="@+id/sd3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sd"/>

        <EditText
            android:hint="@string/karyawan_name_small"
            android:layout_marginStart="20dp"
            android:id="@+id/nmKaryawanEndTxtET"
            app:layout_constraintStart_toEndOf="@id/sd1"
            app:layout_constraintTop_toTopOf="@id/nmKaryawanTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <EditText
            android:inputType="number"
            android:gravity="end"
            android:hint="@string/usia_small"
            android:id="@+id/usiaEndTxtET"
            app:layout_constraintStart_toStartOf="@id/nmKaryawanEndTxtET"
            app:layout_constraintEnd_toEndOf="@id/nmKaryawanEndTxtET"
            app:layout_constraintTop_toTopOf="@id/usiaTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


        <EditText
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:hint="@string/tgl_msk_kerja_small"
            android:id="@+id/tglMskKrjEndTxtET"
            app:layout_constraintEnd_toEndOf="@id/nmKaryawanEndTxtET"
            app:layout_constraintStart_toStartOf="@id/nmKaryawanEndTxtET"
            app:layout_constraintTop_toTopOf="@id/tglMskKrjTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


        <Button
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@id/nmKaryawanEndTxtET"
            app:layout_constraintStart_toEndOf="@id/nmKaryawanEndTxtET"
            android:text="@string/search"
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tglMskKrjTxt"
            android:id="@+id/layoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:text="@string/novel"
                android:id="@+id/newBtn"
                android:layout_weight=".25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"/>

            <Button
                android:text="@string/edit"
                android:layout_weight=".25"
                android:id="@+id/editBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"/>

            <Button
                android:text="@string/delete"
                android:layout_weight=".25"
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"/>

            <Button
                android:text="@string/close"
                android:layout_weight=".25"
                android:id="@+id/closeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/layoutButton"
            android:id="@+id/titleTbl"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textSize="22sp"
                android:id="@+id/idtblTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/id" />

            <TextView
                android:textStyle="bold"
                android:textSize="22sp"
                android:id="@+id/nmKaryawantblTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/name"/>

            <TextView
                android:textStyle="bold"
                android:textSize="22sp"
                android:id="@+id/tglMskKrjtblTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/tgl_msk_kerja"/>

            <TextView
                android:textStyle="bold"
                android:textSize="22sp"
                android:id="@+id/usiatblTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/usia"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="10dp"
            android:id="@+id/listKaryawanRv"
            app:layout_constraintTop_toBottomOf="@id/titleTbl"
            android:layout_width="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_karyawan"
            tools:itemCount="10"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>