<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.ListUserGithubActivity">

    <TextView
        android:textColor="@color/black"
        android:visibility="invisible"
        android:id="@+id/errorTxt"
        android:text="@string/error"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:visibility="invisible"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/loadingPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:id="@+id/layoutLUG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="?attr/colorPrimary"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/white"
                android:layout_marginEnd="10dp"
                android:textSize="18sp"
                android:id="@+id/idTxt"
                android:layout_weight=".25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textStyle="bold"/>

            <TextView
                android:textColor="@color/white"
                android:layout_marginEnd="10dp"
                android:textSize="18sp"
                android:id="@+id/nmUserGithub"
                android:layout_weight=".25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"/>

            <TextView
                android:textColor="@color/white"
                android:layout_marginEnd="10dp"
                android:textSize="18sp"
                android:id="@+id/htmlTxt"
                android:layout_weight=".4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/html"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:paddingTop="10dp"
            android:id="@+id/listUserGithubRv"
            android:layout_width="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_user_github"
            tools:itemCount="10"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>